Build workflow update: Adjust Jar file path and enable automatic publishing
In the build workflow, the packaging path of the Jar files has been updated, including the Jar built by the Core project. In addition, the automatic publishing process has been configured to trigger after the build is successful.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,9 @@ jobs:
               if: success()
               with:
                   name: ${{ steps.timestamp.outputs.repo_name }}-${{ steps.timestamp.outputs.short_sha }}
-                  path: Bukkit/build/libs/*.jar
+                  path: |
+                      Core/build/libs/*.jar
+                      Bukkit/build/libs/*.jar
 
             - name: Automatic release
               if: success()
